mac/shell.txt

(venv) Ojass-MacBook-Pro:mac ojasjoshi$ python manage.py shell
Python 3.8.3 (default, Jul 30 2020, 20:32:05) 
[Clang 10.0.1 (clang-1001.0.46.4)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> 
>>> 
>>> 
>>> from shop.models import Product
>>> Product.objects.all()
<QuerySet [<Product: Watch>, <Product: Ghadi Detergent>, <Product: Mac mini>, <Product: watch3>]>
>>> myprod = Product(product_name="mouse" , category="computer" , subcategory = "devices", price=12 , desc= "chooha hai ye", pub_date=timezzone.now())
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'timezzone' is not defined
>>> myprod = Product(product_name="mouse" , category="computer" , subcategory = "devices", price=12 , desc= "chooha hai ye", pub_date=timezzone.now())
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'timezzone' is not defined
>>> form django.utils import timezone
  File "<console>", line 1
    form django.utils import timezone
         ^
SyntaxError: invalid syntax
>>> from django.utils import timezone
>>> myprod = Product(product_name="mouse" , category="computer" , subcategory = "devices", price=12 , desc= "chooha hai ye", pub_date=timezzone.now())
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'timezzone' is not defined
>>> myprod = Product(product_name="mouse" , category="computer" , subcategory = "devices", price=12 , desc= "chooha hai ye", pub_date=timezone.now())
>>> myprod.name
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Product' object has no attribute 'name'
>>> myprod.save()
>>> myprod.name
Traceback (most recent call last):
  File "<console>", line 1, in <module>
AttributeError: 'Product' object has no attribute 'name'
>>> myprod.product_name
'mouse'
>>> Product.objects.get(product_name="mouse")
<Product: mouse>
>>> a = Product.objects.get(product_name="mouse")
>>> a.category
'computer'
>>> a.subcategory
'devices'
>>> a.price
12
>>> a.desc
'chooha hai ye'
>>> 